新增token欄位
