# routes/users.js
@@ -159,8 +159,15 @@ router.post('/sign_in',
 
 /* profile */
 router.get('/profile',
-  /* 	#swagger.tags = ['User']
-      #swagger.description = '檢視個人資料' */
+    /* 	#swagger.tags = ['User']
+        #swagger.description = '檢視個人資料' */
+    /*  #swagger.parameters['authorization'] = {
+        in: 'header',
+        name: 'Authorization',
+        description: 'Access token required for authentication',
+        required: true,
+        type: 'string'
+    } */
   /* #swagger.responses[200] = { 
       schema: {
           "name": "string",
@@ -193,6 +200,13 @@ router.get('/profile',
 router.patch('/profile',
   /* 	#swagger.tags = ['User']
       #swagger.description = '編輯個人資料' */
+    /*  #swagger.parameters['authorization'] = {
+        in: 'header',
+        name: 'Authorization',
+        description: 'Access token required for authentication',
+        required: true,
+        type: 'string'
+    } */
   /*	#swagger.parameters['obj'] = {
         in: 'body',
         description: '編輯個人資料',
@@ -257,8 +271,15 @@ router.patch('/profile',
 
 /* update password */
 router.post('/updatePassword',
-     /* 	#swagger.tags = ['User']
+    /* 	#swagger.tags = ['User']
         #swagger.description = '修改密碼功能' */
+    /*  #swagger.parameters['authorization'] = {
+        in: 'header',
+        name: 'Authorization',
+        description: 'Access token required for authentication',
+        required: true,
+        type: 'string'
+    } */
     /*	#swagger.parameters['obj'] = {
           in: 'body',
           description: '修改密碼功能',
@@ -326,6 +347,13 @@ router.post('/updatePassword',
 router.get('/getLikeList',
   /*  #swagger.tags = ['User']
       #swagger.description = '獲取個人喜歡列表' */
+    /*  #swagger.parameters['authorization'] = {
+        in: 'header',
+        name: 'Authorization',
+        description: 'Access token required for authentication',
+        required: true,
+        type: 'string'
+    } */
   /* #swagger.responses[200] = { 
       schema: {
           "message": "string",
@@ -370,6 +398,13 @@ router.get('/getLikeList',
 router.post('/:id/follow',
   /*  #swagger.tags = ['User']
       #swagger.description = '追蹤好友' */
+    /*  #swagger.parameters['authorization'] = {
+        in: 'header',
+        name: 'Authorization',
+        description: 'Access token required for authentication',
+        required: true,
+        type: 'string'
+    } */
   /* #swagger.parameters['id'] = {
         in: 'path',
         description: '被追蹤用戶的ID',
@@ -433,6 +468,13 @@ router.post('/:id/follow',
 router.delete('/:id/unfollow',
   /*  #swagger.tags = ['User']
       #swagger.description = '取消追蹤好友' */
+   /*  #swagger.parameters['authorization'] = {
+        in: 'header',
+        name: 'Authorization',
+        description: 'Access token required for authentication',
+        required: true,
+        type: 'string'
+    } */
   /* #swagger.parameters['id'] = {
         in: 'path',
         description: '被取消追蹤用戶的ID',
@@ -491,6 +533,13 @@ router.delete('/:id/unfollow',
 router.get('/following',
   /*  #swagger.tags = ['User']
       #swagger.description = '獲取個人追蹤列表' */
+    /*  #swagger.parameters['authorization'] = {
+        in: 'header',
+        name: 'Authorization',
+        description: 'Access token required for authentication',
+        required: true,
+        type: 'string'
+    } */
   /* #swagger.responses[200] = { 
       schema: {
           "message": "string",
