# swagger-output.json
@@ -226,8 +226,10 @@
         "description": "檢視個人資料",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           }
         ],
@@ -294,8 +296,10 @@
         "description": "編輯個人資料",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           },
           {
@@ -398,8 +402,10 @@
         "description": "修改密碼功能",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           },
           {
@@ -494,8 +500,10 @@
         "description": "獲取個人喜歡列表",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           }
         ],
@@ -596,8 +604,10 @@
             "description": "被追蹤用戶的ID"
           },
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           }
         ],
@@ -680,8 +690,10 @@
             "description": "被取消追蹤用戶的ID"
           },
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           }
         ],
@@ -757,8 +769,10 @@
         "description": "獲取個人追蹤列表",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           }
         ],
@@ -850,8 +864,10 @@
         "description": "取得所有貼文",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           },
           {
@@ -999,8 +1015,10 @@
         "description": "新增單筆貼文",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           },
           {
@@ -1175,8 +1193,10 @@
             "description": "貼文的ID"
           },
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           }
         ],
@@ -1640,8 +1660,10 @@
             "description": "貼文的ID"
           },
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           }
         ],
@@ -1735,8 +1757,10 @@
             "description": "貼文的ID"
           },
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           }
         ],
@@ -1832,8 +1856,10 @@
             "description": "貼文的ID"
           },
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           },
           {
@@ -2096,8 +2122,10 @@
         "description": "檔案上傳功能",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
+            "description": "Access token required for authentication",
+            "required": true,
             "type": "string"
           },
           {
